[package]
name = "kungfu"
version = "0.1.0"
authors = ["yinheli <me@yinheli.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
config = "0.10.1"
serde = "1.0.123"
serde_derive = "1.0.123"
tokio = { version = "0.2", features = ["full", "udp"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3.13"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"
num_cpus = "1.13.0"
tun = { version = "0.5.1", features = ["async"] }
pnet = "0.27.2"
ipnet = "2.3.0"
cidr-utils = "0.5.0"
trust-dns-server = "0.19"
trust-dns-proto = "0.19"
trust-dns-client = "0.19"
trust-dns-resolver = "0.19"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
